NPOTDB Fix bug 368248 - getting binding exceptions with xforms:repeat.  Patch by aaronr, r=smaug,me