extensions/xforms/nsXFormsControlStub.h
@@ -61,6 +61,18 @@ class nsIDOMEvent;
 class nsIDOMXPathResult;
 
 /**
+ * nsRepeatState is used to indicate whether the element
+ * is inside \<repeat\>'s template. If it is, there is no need
+ * to refresh the widget bound to the element.
+ */
+enum nsRepeatState {
+  eType_Unknown,
+  eType_Template,
+  eType_GeneratedContent,
+  eType_NotApplicable
+};
+
+/**
  * Common stub for all XForms controls that inherit from nsIXFormsControl and
  * is bound to an instance node.
  */
@@ -105,6 +117,7 @@ public:
   NS_IMETHOD OnDestroyed();
   NS_IMETHOD WillChangeDocument(nsIDOMDocument *aNewDocument);
   NS_IMETHOD DocumentChanged(nsIDOMDocument *aNewDocument);
+  NS_IMETHOD WillChangeParent(nsIDOMElement *aNewParent);
   NS_IMETHOD ParentChanged(nsIDOMElement *aNewParent);
   NS_IMETHOD WillSetAttribute(nsIAtom *aName, const nsAString &aValue);
   NS_IMETHOD AttributeSet(nsIAtom *aName, const nsAString &aValue);
@@ -144,6 +157,14 @@ public:
    */
   virtual PRBool IsContentComplex();
 
+  /**
+   * Get/Set the repeat state for the control.  The repeat state indicates
+   * whether the control lives inside a context container, a repeat element,
+   * an itemset or non of the above.
+   */
+  virtual nsRepeatState GetRepeatState();
+  virtual void SetRepeatState(nsRepeatState aState);
+
   // nsIXFormsContextControl
   NS_DECL_NSIXFORMSCONTEXTCONTROL
 
@@ -160,6 +181,7 @@ public:
                               nsIXTFElement::NOTIFY_ATTRIBUTE_REMOVED | 
                               nsIXTFElement::NOTIFY_WILL_CHANGE_DOCUMENT |
                               nsIXTFElement::NOTIFY_DOCUMENT_CHANGED |
+                              nsIXTFElement::NOTIFY_WILL_CHANGE_PARENT |
                               nsIXTFElement::NOTIFY_PARENT_CHANGED |
                               nsIXTFElement::NOTIFY_HANDLE_DEFAULT),
     kElementFlags(nsXFormsUtils::ELEMENT_WITH_MODEL_ATTR),
@@ -168,7 +190,8 @@ public:
     mUsesModelBinding(PR_FALSE),
     mAppearDisabled(PR_FALSE),
     mOnDeferredBindList(PR_FALSE),
-    mBindAttrsCount(0)
+    mBindAttrsCount(0),
+    mRepeatState(eType_Unknown)
     {};
 
 protected:
@@ -216,6 +239,8 @@ protected:
    * attributes.
    */
   PRInt8 mBindAttrsCount;
+
+  nsRepeatState mRepeatState;
 
   /**
    * List of repeats that the node binding depends on.  This happens when using
@@ -305,6 +330,16 @@ protected:
    * bound.
    */
   nsresult GetBoundBuiltinType(PRUint16 *aBuiltinType);
+
+  /**
+   * This is called when the parent node for a XForms control changes.
+   * It checks the ancestors of the element and returns an nsRepeatState
+   * depending on the element's place in the document.
+   *
+   * @param aParent           The new parent of the XForms control
+   */
+  nsRepeatState UpdateRepeatState(nsIDOMNode *aParent);
+
 };
 
 #endif
